// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state 1`] = `
.c7 {
  box-sizing: border-box;
  margin-right: 32px;
}

.c8 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  max-width: 700px;
  padding: 24px;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 16px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
}

.c11 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  display: flex;
  align-items: start;
}

.c4 {
  box-sizing: border-box;
  margin-top: 24px;
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  max-width: 700px;
  padding: 24px;
  display: flex;
  align-items: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Trusted Devices
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
        width="100%"
      >
        <div
          class="c5 sc-AxirZ c6"
        >
          <div
            class="c7"
            style="text-align: center;"
          >
            <svg
              data-testid="svg"
              fill="rgba(255,255,255,0.18)"
              height="150"
              viewBox="0 0 1024 1024"
              width="150"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M179.2 716.8h665.6c42.342 0 76.8-34.458 76.8-76.8v-409.6c0-42.342-34.458-76.8-76.8-76.8h-665.6c-42.342 0-76.8 34.458-76.8 76.8v409.6c0 42.342 34.458 76.8 76.8 76.8zM153.6 230.4c0-14.131 11.469-25.6 25.6-25.6h665.6c14.131 0 25.6 11.469 25.6 25.6v409.6c0 14.131-11.469 25.6-25.6 25.6h-665.6c-14.131 0-25.6-11.469-25.6-25.6v-409.6z"
              />
              <path
                d="M998.4 768h-972.8c-14.131 0-25.6 11.469-25.6 25.6v51.2c0 42.342 34.458 76.8 76.8 76.8h870.4c42.342 0 76.8-34.458 76.8-76.8v-51.2c0-14.131-11.469-25.6-25.6-25.6zM947.2 870.4h-870.4c-14.131 0-25.6-11.469-25.6-25.6v-25.6h921.6v25.6c0 14.131-11.469 25.6-25.6 25.6z"
              />
            </svg>
          </div>
          <div
            class="c8"
          >
            <div
              class="c9"
            >
              Register Trusted Device
            </div>
            <div
              class="c10"
            >
              Device Trust enables authenticated device access. Resources protected by the Device Trust mode "required" will enforce the use of a Trusted Device, in addition to establishing the user's identity and enforcing the necessary roles.
            </div>
            <div
              class="c10"
            >
              Trusted Devices can be registered manually using
               
              <a
                class="c11"
                color="text.main"
                href="https://goteleport.com/docs/access-controls/device-trust/guide/?scope=enterprise#step-12-register-a-trusted-device"
                rel="noreferrer"
                target="_blank"
              >
                tctl client
              </a>
               
              or synced automatically from MDM services like
               
              <a
                class="c11"
                color="text.main"
                href="https://goteleport.com/docs/access-controls/device-trust/jamf-integration/?scope=enterprise"
                rel="noreferrer"
                target="_blank"
              >
                Jamf
              </a>
              .
            </div>
            <div
              class="c12"
            >
              Please
               
              <a
                class="c11"
                color="text.main"
                href="https://goteleport.com/docs/access-controls/guides/device-trust/"
                rel="noreferrer"
                target="_blank"
              >
                view our documentation
              </a>
               
              on how to get started with Device Trust.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`empty with CTA 1`] = `
.c7 {
  box-sizing: border-box;
  margin-right: 32px;
}

.c8 {
  box-sizing: border-box;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  width: 176px;
}

.c16:hover,
.c16:focus {
  background: #B29DFF;
}

.c16:active {
  background: #C5B6FF;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c6 {
  box-sizing: border-box;
  max-width: 700px;
  padding: 24px;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 16px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 8px;
}

.c11 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  display: flex;
  align-items: start;
}

.c4 {
  box-sizing: border-box;
  margin-top: 24px;
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  max-width: 700px;
  padding: 24px;
  display: flex;
  align-items: center;
}

.c13 {
  box-sizing: border-box;
  margin-top: 16px;
  display: flex;
  align-items: center;
  justify-content: end;
  flex-direction: column;
}

.c17 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      width="100%"
    >
      <div
        class="c5 sc-AxirZ c6"
      >
        <div
          class="c7"
          style="text-align: center;"
        >
          <svg
            data-testid="svg"
            fill="rgba(255,255,255,0.18)"
            height="150"
            viewBox="0 0 1024 1024"
            width="150"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M179.2 716.8h665.6c42.342 0 76.8-34.458 76.8-76.8v-409.6c0-42.342-34.458-76.8-76.8-76.8h-665.6c-42.342 0-76.8 34.458-76.8 76.8v409.6c0 42.342 34.458 76.8 76.8 76.8zM153.6 230.4c0-14.131 11.469-25.6 25.6-25.6h665.6c14.131 0 25.6 11.469 25.6 25.6v409.6c0 14.131-11.469 25.6-25.6 25.6h-665.6c-14.131 0-25.6-11.469-25.6-25.6v-409.6z"
            />
            <path
              d="M998.4 768h-972.8c-14.131 0-25.6 11.469-25.6 25.6v51.2c0 42.342 34.458 76.8 76.8 76.8h870.4c42.342 0 76.8-34.458 76.8-76.8v-51.2c0-14.131-11.469-25.6-25.6-25.6zM947.2 870.4h-870.4c-14.131 0-25.6-11.469-25.6-25.6v-25.6h921.6v25.6c0 14.131-11.469 25.6-25.6 25.6z"
            />
          </svg>
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            Register Trusted Device
          </div>
          <div
            class="c10"
          >
            Device Trust enables authenticated device access. Resources protected by the Device Trust mode "required" will enforce the use of a Trusted Device, in addition to establishing the user's identity and enforcing the necessary roles.
          </div>
          <div
            class="c10"
          >
            Trusted Devices can be registered manually using
             
            <a
              class="c11"
              color="text.main"
              href="https://goteleport.com/docs/access-controls/device-trust/guide/?scope=enterprise#step-12-register-a-trusted-device"
              rel="noreferrer"
              target="_blank"
            >
              tctl client
            </a>
             
            or synced automatically from MDM services like
             
            <a
              class="c11"
              color="text.main"
              href="https://goteleport.com/docs/access-controls/device-trust/jamf-integration/?scope=enterprise"
              rel="noreferrer"
              target="_blank"
            >
              Jamf
            </a>
            .
          </div>
          <div
            class="c12"
          >
            Please
             
            <a
              class="c11"
              color="text.main"
              href="https://goteleport.com/docs/access-controls/guides/device-trust/"
              rel="noreferrer"
              target="_blank"
            >
              view our documentation
            </a>
             
            on how to get started with Device Trust.
          </div>
        </div>
      </div>
      <div
        class="c13"
      >
        <div
          class="c14"
          color="text.slightlyMuted"
        >
          <i>
            Your Team Plan includes five free Trusted Devices.
          </i>
        </div>
        <div
          class="c15"
        >
          Want additional devices?
        </div>
        <a
          class="c16"
          href="https://goteleport.com/r/upgrade-team?4.4.0-dev&utm_campaign=CTA_TRUSTED_DEVICES"
          kind="primary"
          rel="noreferrer"
          style="text-transform: none;"
          target="blank"
          width="176px"
        >
          <div
            class="c17"
          >
            Contact Sales
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed 1`] = `
.c3 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c3 a {
  color: #FFFFFF;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c3"
    kind="danger"
  >
    some error message
  </div>
</div>
`;

exports[`loaded 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 40px;
  width: 100%;
}

.c23 {
  box-sizing: border-box;
  margin-left: auto;
  width: 240px;
  color: #FFFFFF;
}

.c19 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c22 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c16 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c16 .c18 {
  color: inherit;
}

.c16:disabled {
  color: rgba(255,255,255,0.36);
}

.c16:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c16:hover:enabled,
.c16:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c16:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c20 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c20 .c18 {
  color: inherit;
}

.c20:disabled {
  color: rgba(255,255,255,0.36);
}

.c20:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c20:hover:enabled,
.c20:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c20:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 16px;
}

.c25 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c26 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  display: flex;
  align-items: start;
}

.c12 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c13 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c15 {
  box-sizing: border-box;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c21 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c21 > thead > tr > th,
.c21 > tbody > tr > th,
.c21 > tfoot > tr > th,
.c21 > thead > tr > td,
.c21 > tbody > tr > td,
.c21 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c21 > thead > tr > th:first-child,
.c21 > tbody > tr > th:first-child,
.c21 > tfoot > tr > th:first-child,
.c21 > thead > tr > td:first-child,
.c21 > tbody > tr > td:first-child,
.c21 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c21 > thead > tr > th:last-child,
.c21 > tbody > tr > th:last-child,
.c21 > tfoot > tr > th:last-child,
.c21 > thead > tr > td:last-child,
.c21 > tbody > tr > td:last-child,
.c21 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c21 > tbody > tr > td {
  vertical-align: middle;
}

.c21 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c21 > thead > tr > th .c18 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c21 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c21 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c21 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c6 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c5 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c17 .c18 {
  font-size: 20px;
}

.c17 .c18:before {
  padding-left: 1px;
}

.c11 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c10 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c8 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c7 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c9 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c9:hover,
.c9:focus,
.c9:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c9::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      width="100%"
    >
      <div
        class="c5"
      >
        <nav
          class="c6"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <input
                class="c9"
                placeholder="SEARCH..."
                value=""
              />
              <div
                class="c10"
              >
                <div
                  class="c11"
                />
              </div>
            </div>
          </div>
          <div
            class="c12"
            width="100%"
          >
            <div
              class="c13"
            >
              <div
                class="c14"
                color="text.main"
                style="white-space: nowrap; text-transform: uppercase;"
              >
                Showing 
                <strong>
                  1
                </strong>
                 - 
                <strong>
                  3
                </strong>
                 of
                 
                <strong>
                  3
                </strong>
              </div>
            </div>
            <div
              class="c15"
            >
              <button
                class="c16 c17"
                disabled=""
                title="Previous page"
              >
                <span
                  class="c18 c19 icon icon-arrow-left-circle "
                  font-size="3"
                />
              </button>
              <button
                class="c20 c17"
                disabled=""
                title="Next page"
              >
                <span
                  class="c18 c19 icon icon-arrow-right-circle "
                  font-size="3"
                />
              </button>
            </div>
          </div>
        </nav>
        <table
          class="c21"
        >
          <thead>
            <tr>
              <th
                style="cursor: default;"
              >
                OS Type
              </th>
              <th
                style="cursor: default;"
              >
                Asset Tag
              </th>
              <th
                style="cursor: default;"
              >
                Enroll Status
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                align="left"
              >
                <span
                  class="c18 c22 icon icon-apple "
                  style="padding-right: 5px;"
                />
                 
                macOS
              </td>
              <td>
                CSXXXXXXXXX
              </td>
              <td>
                enrolled
              </td>
            </tr>
            <tr>
              <td
                align="left"
              >
                <span
                  class="c18 c22 icon icon-linux "
                  style="padding-right: 5px;"
                />
                 
                Linux
              </td>
              <td>
                DSXXXXXXXXX
              </td>
              <td>
                not enrolled
              </td>
            </tr>
            <tr>
              <td
                align="left"
              >
                <span
                  class="c18 c22 icon icon-windows "
                  style="padding-right: 5px;"
                />
                 
                Windows
              </td>
              <td>
                ESXXXXXXXXX
              </td>
              <td>
                enrolled
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="c23"
      color="text.main"
      style="flex-shrink: 0;"
      width="240px"
    >
      <div
        class="c24"
      >
        Register Trusted Device
      </div>
      <div
        class="c25"
      >
        Trusted Devices can be registered manually using
         
        <a
          class="c26"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/guide/?scope=enterprise#step-12-register-a-trusted-device"
          rel="noreferrer"
          target="_blank"
        >
          tctl client
        </a>
         
        or synced automatically from MDM services like
         
        <a
          class="c26"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/jamf-integration/?scope=enterprise"
          rel="noreferrer"
          target="_blank"
        >
          Jamf
        </a>
        .
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded with CTA 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 40px;
  width: 100%;
}

.c28 {
  box-sizing: border-box;
  margin-left: auto;
  width: 240px;
  color: #FFFFFF;
}

.c26 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  width: 176px;
}

.c26:hover,
.c26:focus {
  background: #B29DFF;
}

.c26:active {
  background: #C5B6FF;
}

.c26:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c19 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c22 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c16 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c16 .c18 {
  color: inherit;
}

.c16:disabled {
  color: rgba(255,255,255,0.36);
}

.c16:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c16:hover:enabled,
.c16:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c16:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c20 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c20 .c18 {
  color: inherit;
}

.c20:disabled {
  color: rgba(255,255,255,0.36);
}

.c20:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c20:hover:enabled,
.c20:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c20:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c25 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 8px;
}

.c29 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 16px;
}

.c30 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c31 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  display: flex;
  align-items: start;
}

.c12 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c13 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c15 {
  box-sizing: border-box;
  display: flex;
}

.c23 {
  box-sizing: border-box;
  margin-top: 16px;
  display: flex;
  align-items: end;
  justify-content: end;
  flex-direction: column;
}

.c27 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c21 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c21 > thead > tr > th,
.c21 > tbody > tr > th,
.c21 > tfoot > tr > th,
.c21 > thead > tr > td,
.c21 > tbody > tr > td,
.c21 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c21 > thead > tr > th:first-child,
.c21 > tbody > tr > th:first-child,
.c21 > tfoot > tr > th:first-child,
.c21 > thead > tr > td:first-child,
.c21 > tbody > tr > td:first-child,
.c21 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c21 > thead > tr > th:last-child,
.c21 > tbody > tr > th:last-child,
.c21 > tfoot > tr > th:last-child,
.c21 > thead > tr > td:last-child,
.c21 > tbody > tr > td:last-child,
.c21 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c21 > tbody > tr > td {
  vertical-align: middle;
}

.c21 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c21 > thead > tr > th .c18 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c21 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c21 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c21 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c6 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c5 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c17 .c18 {
  font-size: 20px;
}

.c17 .c18:before {
  padding-left: 1px;
}

.c11 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c10 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c8 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c7 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c9 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c9:hover,
.c9:focus,
.c9:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c9::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      width="100%"
    >
      <div
        class="c5"
      >
        <nav
          class="c6"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <input
                class="c9"
                placeholder="SEARCH..."
                value=""
              />
              <div
                class="c10"
              >
                <div
                  class="c11"
                />
              </div>
            </div>
          </div>
          <div
            class="c12"
            width="100%"
          >
            <div
              class="c13"
            >
              <div
                class="c14"
                color="text.main"
                style="white-space: nowrap; text-transform: uppercase;"
              >
                Showing 
                <strong>
                  1
                </strong>
                 - 
                <strong>
                  3
                </strong>
                 of
                 
                <strong>
                  3
                </strong>
              </div>
            </div>
            <div
              class="c15"
            >
              <button
                class="c16 c17"
                disabled=""
                title="Previous page"
              >
                <span
                  class="c18 c19 icon icon-arrow-left-circle "
                  font-size="3"
                />
              </button>
              <button
                class="c20 c17"
                disabled=""
                title="Next page"
              >
                <span
                  class="c18 c19 icon icon-arrow-right-circle "
                  font-size="3"
                />
              </button>
            </div>
          </div>
        </nav>
        <table
          class="c21"
        >
          <thead>
            <tr>
              <th
                style="cursor: default;"
              >
                OS Type
              </th>
              <th
                style="cursor: default;"
              >
                Asset Tag
              </th>
              <th
                style="cursor: default;"
              >
                Enroll Status
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                align="left"
              >
                <span
                  class="c18 c22 icon icon-apple "
                  style="padding-right: 5px;"
                />
                 
                macOS
              </td>
              <td>
                CSXXXXXXXXX
              </td>
              <td>
                enrolled
              </td>
            </tr>
            <tr>
              <td
                align="left"
              >
                <span
                  class="c18 c22 icon icon-linux "
                  style="padding-right: 5px;"
                />
                 
                Linux
              </td>
              <td>
                DSXXXXXXXXX
              </td>
              <td>
                not enrolled
              </td>
            </tr>
            <tr>
              <td
                align="left"
              >
                <span
                  class="c18 c22 icon icon-windows "
                  style="padding-right: 5px;"
                />
                 
                Windows
              </td>
              <td>
                ESXXXXXXXXX
              </td>
              <td>
                enrolled
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="c23"
      >
        <div
          class="c24"
          color="text.slightlyMuted"
        >
          <i>
            Your Team Plan includes five free Trusted Devices.
          </i>
        </div>
        <div
          class="c25"
        >
          Want additional devices?
        </div>
        <a
          class="c26"
          href="https://goteleport.com/r/upgrade-team?4.4.0-dev&utm_campaign=CTA_TRUSTED_DEVICES"
          kind="primary"
          rel="noreferrer"
          style="text-transform: none;"
          target="blank"
          width="176px"
        >
          <div
            class="c27"
          >
            Contact Sales
          </div>
        </a>
      </div>
    </div>
    <div
      class="c28"
      color="text.main"
      style="flex-shrink: 0;"
      width="240px"
    >
      <div
        class="c29"
      >
        Register Trusted Device
      </div>
      <div
        class="c30"
      >
        Trusted Devices can be registered manually using
         
        <a
          class="c31"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/guide/?scope=enterprise#step-12-register-a-trusted-device"
          rel="noreferrer"
          target="_blank"
        >
          tctl client
        </a>
         
        or synced automatically from MDM services like
         
        <a
          class="c31"
          color="text.main"
          href="https://goteleport.com/docs/access-controls/device-trust/jamf-integration/?scope=enterprise"
          rel="noreferrer"
          target="_blank"
        >
          Jamf
        </a>
        .
      </div>
    </div>
  </div>
</div>
`;
